monitoring/configs/athena/kube-prometheus-stack/grafana-ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: cilium
  rules:
    - host: grafana.uclab8.net
      http:
        paths:
          - backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana.uclab8.net
      secretName: grafana-ingress-tls-prod
